--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build-css": ""
+    "build-css": "tailwindcss build src/scss/styles.scss -o public/assets/css/styles.css",
+    "build-css-watch": "npx tailwindcss -i src/scss/styles.scss -o public/assets/css/styles.css --watch"
   },
   "keywords": [],
   "author": "Bruno Assis de Tassis <brunotassis@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "tailwindcss": "^3.1.8"
+  }
 }
