--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "build-css": "tailwindcss build src/scss/styles.scss -o public/assets/css/styles.css",
-    "build-css-watch": "npx tailwindcss -i src/scss/styles.scss -o public/assets/css/styles.css --watch"
+    "build-css:watch": "npx tailwindcss -i src/scss/styles.scss -o public/assets/css/styles.css --watch"
   },
   "keywords": [],
-  "author": "Bruno Assis de Tassis <brunotassis@gmail.com>",
+  "author": "Bruno Tassis e Renato Nunes",
   "license": "ISC",
   "devDependencies": {
     "tailwindcss": "^3.1.8"
